--- a/NABCMobile/app/build.gradle
+++ b/NABCMobile/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 buildscript {
     repositories {
         jcenter()
+//        maven { url "http://10.40.250.118/repo" }
     }
 
     dependencies {
@@ -38,6 +39,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -51,7 +62,7 @@ dependencies {
     compile 'org.androidannotations:androidannotations:3.3.1'
     apt 'org.androidannotations:androidannotations:3.3.1'
 
-
+    
     // include sdk project
     compile project(':sdk')
 }
