--- a/NABCMobile/gradle.properties
+++ b/NABCMobile/gradle.properties
@@ -16,3 +16,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+artifactory_url=http://10.40.250.118/artifactory
