--- a/NABCMobile/sdk/build.gradle
+++ b/NABCMobile/sdk/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.library'
 
 repositories {
     mavenCentral()
+//    maven { url "${artifactory_url}/repo" }
 }
-
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -27,4 +27,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.6.0'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.6.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.0'
+
+
 }
